set(ROBOT_LIBRARY_SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(ROBOT_LIBRARY_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include)

file(GLOB_RECURSE ROBOT_LIBRARY_SOURCE_FILES ${ROBOT_LIBRARY_SOURCE_DIRECTORY}/*.cc)
file(GLOB_RECURSE ROBOT_LIBRARY_INCLUDE_FILES ${ROBOT_LIBRARY_INCLUDE_DIRECTORY}/*.h)

add_library(${ROBOT_LIBRARY_NAME} STATIC
  ${ROBOT_LIBRARY_SOURCE_FILES}
  ${ROBOT_LIBRARY_INCLUDE_FILES}
)

# Should be public so when programs link against it include directories are propagated
# I am including source directories as well for generic classes that don't have header files
target_include_directories(${ROBOT_LIBRARY_NAME} PUBLIC ${ROBOT_LIBRARY_SOURCE_DIRECTORY} ${ROBOT_LIBRARY_INCLUDE_DIRECTORY})