set(SCHEDULER_SOURCE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(SCHEDULER_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include)

file(GLOB_RECURSE SCHEDULER_SOURCE_FILES ${SCHEDULER_SOURCE_DIRECTORY}/*.cc)
file(GLOB_RECURSE SCHEDULER_INCLUDE_FILES ${SCHEDULER_INCLUDE_DIRECTORY}/*.h)

add_library(${SCHEDULER_LIBRARY_NAME} STATIC
  ${SCHEDULER_SOURCE_FILES}
  ${SCHEDULER_INCLUDE_FILES}
)

# Needs to be public so when tests link against it include directories are propagated
target_include_directories(${SCHEDULER_LIBRARY_NAME} PUBLIC ${SCHEDULER_SOURCE_DIRECTORY} ${SCHEDULER_INCLUDE_DIRECTORY})